# kececicurve

./: .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  README.md  meta.yaml  pixi.toml  pyproject.toml  recipe.yaml  requirements-dev.txt  setup.py
.github/workflows/: zizmor.yml
example/: kc_example.ipynb
kececicurve/: __init__.py  _version.py  kececicurve.py
recipe/: meta.yaml
