# pyproject.toml

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kececicurve"
version = "0.1.2"
dynamic = ["keywords", "maintainers"]
license = "GPL-3.0-or-later"  # SPDX ID

authors = [
    { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "kececicurve, Keçeci Curve, Keçeci Eğrisi Modülü"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock", "ruff", "numpy", "matplotlib", "scipy"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/WhiteSymmetry/kececicurve"
Repository = "https://github.com/WhiteSymmetry/kececicurve"

[dependency-groups]
build = [
    "setuptools (>=82.0.1)",
    "cython (>=3.2.4)"
]
